commit code change

--- a/synapse_project/profiles.yml
+++ b/synapse_project/profiles.yml
@@ -4,6 +4,9 @@ synapse_project:
     dev:
       type: synapse
       authentication: cli
+      driver: ODBC Driver 18 for SQL Server
       server: synapsewsshijin.sql.azuresynapse.net
       database: lake_db
       schema: dbo
+      encrypt: true
+      trust_cert: false
