--- a/synapse_project/profiles.yml
+++ b/synapse_project/profiles.yml
@@ -6,7 +6,7 @@ synapse_project:
       authentication: cli
       driver: ODBC Driver 18 for SQL Server
       server: synapsewsshijin.sql.azuresynapse.net
-      database: lake_db
+      database: dedicated_synapsepool
       schema: dbo
       encrypt: true
       trust_cert: false
