--- a/data_pipeline/models/stating/tpcg_sources.yml
+++ b/data_pipeline/models/stating/tpcg_sources.yml
@@ -12,7 +12,7 @@ sources:
                - not_null
                - unique
 
-      - name: lineitems
+      - name: lineitem
         columns:
            - name: l_orderkey
              tests:
