--- a/data_pipeline/dbt-dag/Dockerfile
+++ b/data_pipeline/dbt-dag/Dockerfile
@@ -1,3 +1,4 @@
 FROM quay.io/astronomer/astro-runtime:10.3.0
 
-RUN pip install --no-cache-dir dbt-snowflake
+RUN pip uninstall -y apache-airflow-providers-google google-cloud-bigquery \
+    google-cloud-secret-manager google-cloud-storage || true
